--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "mongodb": "^5.4.0",
     "mongoose": "^7.1.0",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.1"
   }
 }
